--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,6 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <title>Anthony Rojas</title>
@@ -17,6 +13,15 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div className='loading-page-index'>
+        <div className="indexload-thecube">
+            <div className="indexload-cube cssload-c1"></div>
+            <div className="indexload-cube cssload-c2"></div>
+            <div className="indexload-cube cssload-c4"></div>
+            <div className="indexload-cube cssload-c3"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
