add some animations and styling changes

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <meta name="description" content="Anthony Rojas. Personal portfolio website written in React and using Firebase.">
+    <meta name="author" content="Anthony Rojas">
+    <meta name="keywords" content="ReactJS, Javascript, HTML, CSS, Firebase, Firestore, Portfolio">
     <title>Anthony Rojas</title>
   </head>
   <body>
@@ -15,12 +18,12 @@
     </noscript>
     <div id="root">
       <div className='loading-page-index'>
-        <div className="indexload-thecube">
-            <div className="indexload-cube cssload-c1"></div>
-            <div className="indexload-cube cssload-c2"></div>
-            <div className="indexload-cube cssload-c4"></div>
-            <div className="indexload-cube cssload-c3"></div>
-        </div>
+          <div className="indexload-thecube">
+              <div className="indexload-cube cssload-c1"></div>
+              <div className="indexload-cube cssload-c2"></div>
+              <div className="indexload-cube cssload-c4"></div>
+              <div className="indexload-cube cssload-c3"></div>
+          </div>
       </div>
     </div>
   </body>
