initalize context and firestore queries

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,7 @@
     -->
     <title>Anthony Rojas</title>
   </head>
-  <body>
+  <body id="root">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
   </body>
 </html>
